--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
